[project]
name = "semi-realtime-voice-changer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.0",
    "numpy>=2.2.1",
    "pyaudio>=0.2.14",
    "sounddevice>=0.5.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.4",
]
