[project]
name = "semi-realtime-voice-changer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "faster-whisper>=1.1.0",
    "httpx>=0.28.1",
    "numpy>=2.2.1",
    "pyaudio>=0.2.14",
    "sounddevice>=0.5.1",
    "soundfile>=0.12.1",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.4",
]
